--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@vx/pattern": "0.0.195",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-simple-maps": "^1.0.0-beta.0",
-    "react-tooltip": "^4.1.2"
+    "react-tooltip": "^4.1.2",
+    "topojson-server": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
