--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,34 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# The directory Mix will write compiled artifacts to.
+/_build/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# If you run "mix test --cover", coverage assets end up here.
+/cover/
 
-# testing
-/coverage
+# The directory Mix downloads your dependencies sources to.
+/deps/
 
-# production
-/build
+# Where 3rd-party dependencies like ExDoc output generated docs.
+/doc/
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Ignore .fetch files in case you like to edit your project deps locally.
+/.fetch
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# If the VM crashes, it generates a dump, let's ignore it too.
+erl_crash.dump
+
+# Also ignore archive artifacts (built via "mix archive.build").
+*.ez
+
+# Ignore package tarball (built via "mix hex.build").
+diplomacy-*.tar
+
+# If NPM crashes, it generates a log, let's ignore it too.
+npm-debug.log
+
+# The directory NPM downloads your dependencies sources to.
+/node_modules/
+
+# Since we are building assets from assets/,
+# we ignore priv/static. You may want to comment
+# this depending on your deployment strategy.
+/priv/static/
