--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -16,7 +16,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: choir_test
+          POSTGRES_DB: diplomacy_test
         ports:
         - 5432:5432
         # needed because the postgres container does not provide a healthcheck
