--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -7,16 +7,13 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    container:
-      image: elixir:1.9.1
-
     services:
       postgres:
         image: postgres:11.5
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: choir_test
+          POSTGRES_DB: diplomacy_test
         ports:
         - 5432:5432
         # needed because the postgres container does not provide a healthcheck
@@ -24,9 +21,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-
-    - name: Check formatting
-      run: mix format --check-formatted
+    - uses: actions/setup-elixir@v1.1.0
+      with:
+        otp-version: 22.x
+        elixir-version: 1.9.x
 
     - name: Install Dependencies
       run: |
@@ -34,14 +32,17 @@ jobs:
         mix local.hex --force
         mix deps.get
 
+    - name: Check formatting
+      run: mix format --check-formatted
+
     - name: Run Tests
       # We need to run with POSTGRES_HOST because these commands run in a container
-      run: |
-        POSTGRES_HOST=postgres mix ecto.create
-        POSTGRES_HOST=postgres mix test
       env:
         POSTGRES_HOST: postgres
         POSTGRES_PORT: ${{ job.services.postgres.ports['5432'] }}
+      run: |
+        mix ecto.create
+        mix test
 
   # Use dializer to typecheck.
   typecheck:
@@ -49,11 +50,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-
     - uses: actions/setup-elixir@v1.1.0
-        with:
-          otp-version: 22.x
-          elixir-version: 1.9.x
+      with:
+        otp-version: 22.x
+        elixir-version: 1.9.x
+
+    - name: Cache Dialyzer typings
+      uses: actions/cache@v1
+      env:
+        cache-name: cache-typings
+      with:
+        path: priv/plts
+        key: build-${{ env.cache-name }}-${{ hashFiles('mix.lock') }}
 
     - name: Install dependencies
       run: mix deps.get
