--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "@vx/pattern": "0.0.195",
+    "autoprefixer": "^9.8.6",
     "axios": "^0.19.2",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
+    "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-button": "^0.7.1",
@@ -18,6 +20,7 @@
     "react-simple-maps": "^2.0.0",
     "react-spring": "^8.0.27",
     "react-tooltip": "^4.1.2",
+    "tailwindcss": "^1.6.0",
     "topojson-server": "^3.0.1"
   },
   "devDependencies": {
