Add user login and signup to backend.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@vx/pattern": "0.0.195",
     "autoprefixer": "^9.8.6",
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
+    "axios-hooks": "^2.1.0",
     "elliptic": "^6.5.3",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
